solved project wrapping around sidebar (mostly)

--- a/styles/containers.css
+++ b/styles/containers.css
@@ -7,7 +7,7 @@
 	top: 0;
 	bottom: 0;
 	
-	align-items: right;
+	/* align-items: right; */
 	position: relative;
 	min-height: 100vh;
 	
@@ -26,4 +26,13 @@
 .flex-container > div {
 	width: 25%;
 	text-align: center;
+}
+
+.main {
+	margin-left: 12vw;
+	margin-right: 0;
+	padding: 0;
+	align-self: center;
+	align-items: center;
+	justify-content: center;
 }
