--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,5 +1,5 @@
 .main-menu {
-	width: 12%;
+	width: 12vw;
 	height: 100vh;
 	
 	background-color: #181818;
